<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_version">v0.1</string>
    <string name="app_name">MiLEEM</string>
    <string name="dummy">dummy</string>
    <string name="action_settings">Settings</string>
    <string name="seleccione_barrio">Seleccione un barrio</string>
    <string name="con_zonas">Incluir zonas aledañas</string>
    <string name="advanced_search">Búsqueda Avanzada</string>
    <string name="simple_search">Buscar</string>
    <string name="dolar">U$S</string>
    <string name="peso">$</string>
    <string name="moneda">Moneda</string>
    <string name="precio">Precio</string>
    <string name="precio_desde">desde</string>
    <string name="precio_hasta">hasta</string>
    <string name="a_estrenar">A estrenar</string>
    <string name="sup_total">Superficie total (m2)</string>
    <string name="sup_cubierta">Superficie cubierta (m2)</string>
    <string name="antiguedad">Antiguedad (años)</string>
    <string name="expensas">Expensas ($)</string>
    <string name="distribucion">Distribución</string>
    <string name="upp_si">SI</string>
    <string name="upp_no">NO</string>
    <string name="otras_caracteristicas">Otras características</string>
    <string name="caracteristicas_generales">Características generales</string>
    <string name="cant_ambientes">Ambientes</string>
    <string name="mas_de">mas de</string>
    <string name="menos_de">menos de</string>
    <string name="banos">Baños</string>
    <string name="balcon">Con balcón</string>
    <string name="en_suite">Dormitorio en suite</string>
    <string name="ver_estadisticas">Ver estadísticas</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="cargar_mas">Recargar todo</string>
    <string name="sort_destacadas">Destacadas</string>
    <string name="sort_precio_menor">Menor Precio</string>
    <string name="sort_precio_mayor">Mayor Precio</string>
    <string name="sort_recientes">Más Recientes</string>
	<string name="cerrar_btn">Cerrar</string>
	<string name="ok_btn">OK</string>
	<string name="oops">Oops! algo anda mal</string>
	<string name="connection_error">Hay problemas con su conexión de internet, , por favor intente de nuevo más tarde.</string>
</resources>
